fixed overflow on mobile

--- a/src/api/Alchemy.css
+++ b/src/api/Alchemy.css
@@ -96,3 +96,8 @@
         font-size: 1rem;
     }
 }
+@media only screen and (max-width: 500px) {
+    .wallet-address {
+        font-size: .8rem;
+    }
+}
